--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
+                        <a class="nav-link" href="./index.html">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -52,7 +52,7 @@
                     <img src="./assets/images/me.png" alt="...">
                     <h1 class="font-weight-light">Hi, I'm Amanda!</h1>
                     <p class="lead">Full Stack Web Developer</p>
-                    <a class="nav-link" href="./portfolio.html"> <button type="button" class="btn btn-outline-secondary">Portfolio</button></a>
+                    <a href="./portfolio.html"> <button type="button" class="btn btn-outline-secondary">My Portfolio</button></a>
                 </div>
             </div>
         </div>
