--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,38 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 
 <body>
+
+     <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Amanda Nicole Higgins</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
 <!-- Header -->
 <header class="bg-primary text-center py-5 mb-4 pheader">
   <div class="container">
-    <h1 class="font-weight-light text-black">Portfolio</h1>
+    <h1 class="font-weight-light text-black ptext">Portfolio</h1>
   </div>
 </header>
 
@@ -29,9 +57,9 @@
     <!-- Team Member 1 -->
     <div class="col-xl-3 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="./assets/images/psychic.png" class="card-img-top" alt="...">
+        <a href="https://amandanicolehiggins.github.io/Psychic-Game/"><img src="./assets/images/psychic.png" class="card-img-top pborder" alt="Psychic Game"></a> 
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Psychic Game</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -39,9 +67,9 @@
     <!-- Team Member 2 -->
     <div class="col-xl-3 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="./assets/images/crystal.png" class="card-img-top" alt="...">
+        <a href="https://amandanicolehiggins.github.io/unit-4-game/"> <img src="./assets/images/crystal.png" class="card-img-top pborder" alt="Crystal Collector"></a>
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Crystal Collector</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -49,9 +77,9 @@
     <!-- Team Member 3 -->
     <div class="col-xl-3 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="./assets/images/turtles.png" class="card-img-top" alt="...">
+        <a href="https://amandanicolehiggins.github.io/Trivia-Game/"> <img src="./assets/images/turtles.png" class="card-img-top pborder" alt="Trivia Game"></a>
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Trivia Game</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -59,9 +87,9 @@
     <!-- Team Member 4 -->
     <div class="col-xl-3 col-md-6 mb-4">
       <div class="card border-0 shadow">
-        <img src="./assets/images/giphy.png" class="card-img-top" alt="...">
+        <a href="https://amandanicolehiggins.github.io/Giphy-API/"> <img src="./assets/images/giphy.png" class="card-img-top pborder" alt="Giphy App"></a>
         <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
+          <h5 class="card-title mb-0">Giphy App</h5>
           <div class="card-text text-black-50">Web Developer</div>
         </div>
       </div>
@@ -69,9 +97,9 @@
      <!-- Team Member 5 -->
      <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="./assets/images/train.png" class="card-img-top" alt="...">
+            <a href="https://amandanicolehiggins.github.io/Train-Scheduler/"> <img src="./assets/images/train.png" class="card-img-top pborder" alt="Train Schedule"></a>
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
+            <h5 class="card-title mb-0">Train Schedule</h5>
             <div class="card-text text-black-50">Web Developer</div>
           </div>
         </div>
@@ -79,9 +107,9 @@
        <!-- Team Member 6 -->
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="./assets/images/groupproject.png" class="card-img-top" alt="...">
+            <a href="https://amandanicolehiggins.github.io/Group_Project-1/"> <img src="./assets/images/groupproject.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
           <div class="card-body text-center">
-            <h5 class="card-title mb-0">Team Member</h5>
+            <h5 class="card-title mb-0">Movie & Recipe App</h5>
             <div class="card-text text-black-50">Web Developer</div>
           </div>
         </div>
