adding portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
 </head>
+<script src="https://kit.fontawesome.com/2c9e4ab2cb.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -26,12 +27,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="./index.html">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
@@ -59,7 +60,8 @@
         <a href="https://amandanicolehiggins.github.io/Psychic-Game/"><img src="./assets/images/psychic.png" class="card-img-top pborder" alt="Psychic Game"></a> 
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Psychic Game</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <div class="card-text text-black-50">JavaScript</div>
+          <a href="https://github.com/AmandaNicoleHiggins/Psychic-Game">  <i class="fab fa-github giticon"></i></a>
         </div>
       </div>
     </div>
@@ -69,7 +71,8 @@
         <a href="https://amandanicolehiggins.github.io/unit-4-game/"> <img src="./assets/images/crystal.png" class="card-img-top pborder" alt="Crystal Collector"></a>
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Crystal Collector</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <div class="card-text text-black-50">jQuery</div>
+          <a href="https://github.com/AmandaNicoleHiggins/unit-4-game">  <i class="fab fa-github giticon"></i></a>
         </div>
       </div>
     </div>
@@ -79,7 +82,8 @@
         <a href="https://amandanicolehiggins.github.io/Trivia-Game/"> <img src="./assets/images/turtles.png" class="card-img-top pborder" alt="Trivia Game"></a>
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Trivia Game</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <div class="card-text text-black-50">JavaScript</div>
+          <a href="https://github.com/AmandaNicoleHiggins/Trivia-Game">  <i class="fab fa-github giticon"></i></a>
         </div>
       </div>
     </div>
@@ -89,7 +93,8 @@
         <a href="https://amandanicolehiggins.github.io/Giphy-API/"> <img src="./assets/images/giphy.png" class="card-img-top pborder" alt="Giphy App"></a>
         <div class="card-body text-center">
           <h5 class="card-title mb-0">Giphy App</h5>
-          <div class="card-text text-black-50">Web Developer</div>
+          <div class="card-text text-black-50">API</div>
+          <a href="https://github.com/AmandaNicoleHiggins/Giphy-API">  <i class="fab fa-github giticon"></i></a>
         </div>
       </div>
     </div>
@@ -99,7 +104,8 @@
             <a href="https://amandanicolehiggins.github.io/Train-Scheduler/"> <img src="./assets/images/train.png" class="card-img-top pborder" alt="Train Schedule"></a>
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Train Schedule</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <div class="card-text text-black-50">Firebase</div>
+            <a href="https://github.com/AmandaNicoleHiggins/Train-Scheduler">  <i class="fab fa-github giticon"></i></a>
           </div>
         </div>
       </div>
@@ -109,7 +115,8 @@
             <a href="https://amandanicolehiggins.github.io/Group_Project-1/"> <img src="./assets/images/groupproject.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Movie & Recipe App</h5>
-            <div class="card-text text-black-50">Web Developer</div>
+            <div class="card-text text-black-50">Collaboration</div>
+            <a href="https://github.com/AmandaNicoleHiggins/Group_Project-1">  <i class="fab fa-github giticon"></i></a>
           </div>
         </div>
       </div>
