--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Amanda Higgins</title>
+    <title>Portfolio</title>
 </head>
 <script src="https://kit.fontawesome.com/2c9e4ab2cb.js" crossorigin="anonymous"></script>
 
@@ -18,17 +17,17 @@
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+     <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">Amanda Nicole Higgins</a>
+            <a class="navbar-brand" href="#">Amanda Nicole Higgins</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="./index.html">Home
                             <span class="sr-only">(current)</span>
                         </a>
@@ -36,7 +35,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                 </ul>
@@ -44,21 +43,16 @@
         </div>
     </nav>
 
-    <!-- Full Page Image Header with Vertically Centered Content -->
-    <header class="masthead">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12 text-center">
-                    <img src="./assets/images/me.png" alt="...">
-                    <h1 class="font-weight-light">Hi, I'm Amanda!</h1>
-                    <p class="lead">Full Stack Web Developer</p>
-                    <a href="./portfolio.html"> <button type="button" class="btn btn-outline-secondary">My Portfolio</button></a>
-                </div>
-            </div>
-        </div>
-    </header>
 
+<!-- Header -->
+<header class="bg-primary text-center py-5 mb-4 pheader">
+  <div class="container">
+    <h1 class="font-weight-light text-black ptext">About Me</h1>
+  </div>
+</header>
 
+<!-- Page Content -->
+
+    
 </body>
-
 </html>
