--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,24 @@
 </head>
 <script src="https://kit.fontawesome.com/2c9e4ab2cb.js" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-   
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
 <link rel="stylesheet" type="text/css" href="assets/style.css">
 
 <body>
 
-     <!-- Navigation -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Amanda Nicole Higgins</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -43,29 +51,37 @@
         </div>
     </nav>
 
-<!-- Page Content -->
+    <!-- Page Content -->
 
-<header class="masthead">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-12 text-center">
-                <img src="./assets/images/me.png" alt="...">
-                <h1 class="font-weight-light">Hi, I'm Amanda!</h1>
-                <p class="lead">Thanks for checking out my work! I am currently a Penn LPS Coding Boot Camp student. In this program I'm learning both Front End and Back End Web Development. 
-                  <br><br>My background includes a bachelors degree from Bloomsburg University, where I studied Art Studio and Marketing. I have been working
-                in marketing for 6 years. I currently work as an HTML Developer in email marketing. <br><br>
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center">
+                    <img src="./assets/images/me.png" alt="...">
+                    <h1 class="font-weight-light">Hi, I'm Amanda!</h1>
+                    <p class="lead">Thanks for checking out my work! I am currently a Penn LPS Coding Boot Camp student.
+                        In this program I'm learning both Front End and Back End Web Development.
+                        <br><br>My background includes a bachelors degree from Bloomsburg University, where I studied
+                        Art Studio and Marketing. I have been working
+                        in marketing for 6 years. I currently work as an HTML Developer in email marketing. <br><br>
 
-                <a href="https://github.com/AmandaNicoleHiggins"> <i class="fab fa-github cgiticon"></i></a>
-                <a href="https://www.linkedin.com/in/amanda-higgins-82135b68/"><i class="fab fa-linkedin cgiticon"></i></a>
-                <a href="mailto:amanda.n.higgins@gmail.com"><i class="fas fa-envelope-open-text cgiticon"></i></a>
-                </p>
-                <p>Philadelphia, PA | <a class="clink" href="tel://2676648616">267-664-8616</a> | <a class="clink" href="mailto:amanda.n.higgins@gmail.com">amanda.n.higgins@gmail.com</a></p>
-                
-        
+                        <a href="https://github.com/AmandaNicoleHiggins"> <i class="fab fa-github cgiticon"></i></a>
+                        <a href="https://www.linkedin.com/in/amanda-higgins-82135b68/"><i
+                                class="fab fa-linkedin cgiticon"></i></a>
+                        <a href="mailto:amanda.n.higgins@gmail.com"><i
+                                class="fas fa-envelope-open-text cgiticon"></i></a>
+                        <br>
+                       <span class="contact"> Philadelphia, PA | <a class="clink" href="tel://2676648616">267-664-8616</a> | <a class="clink"
+                            href="mailto:amanda.n.higgins@gmail.com">amanda.n.higgins@gmail.com</a></span>
+
+                    </p>
+
+
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
 
 </body>
+
 </html>
