--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
     <!-- Page Content -->
 
-    <header class="masthead">
+    <header class="masthead2">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
