--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
      <!-- Navigation -->
      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Amanda Nicole Higgins</a>
+            <a class="navbar-brand" href="./index.html">Amanda Nicole Higgins</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
