--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,20 @@
           </div>
         </div>
       </div>
+      <!-- 7 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card border-0 shadow">
+            <a href="https://amandanicolehiggins.github.io/liri-node-app/"> <img src="./assets/images/liri.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+          <div class="card-body text-center">
+            <h5 class="card-title mb-0">LIRI App</h5>
+            <div class="card-text text-black-50">Node</div>
+            <a href="https://github.com/AmandaNicoleHiggins/liri-node-app">  <i class="fab fa-github giticon"></i></a>
+          </div>
+        </div>
+      </div>
   </div>
+
+  
   <!-- /.row -->
 
 </div>
