--- a/portfolio.html
+++ b/portfolio.html
@@ -131,8 +131,20 @@
           </div>
         </div>
       </div>
-  </div>
 
+        <!-- 8 -->
+        <div class="col-xl-3 col-md-6 mb-4">
+          <div class="card border-0 shadow">
+              <a href="https://stark-badlands-78659.herokuapp.com/"> <img src="./assets/images/todo.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+            <div class="card-body text-center">
+              <h5 class="card-title mb-0">To-Dos App</h5>
+              <div class="card-text text-black-50">Node & Express Web Server</div>
+              <a href="hhttps://github.com/AmandaNicoleHiggins/project2">  <i class="fab fa-github giticon"></i></a>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
   
   <!-- /.row -->
 
