updating contact page

--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,16 @@
                 <div class="col-12 text-center">
                     <img src="./assets/images/me.png" alt="...">
                     <h1 class="font-weight-light">Hi, I'm Amanda!</h1>
-                    <p class="lead">Thanks for checking out my work! I am currently a Penn LPS Coding Boot Camp student.
-                        In this program I'm learning both Front End and Back End Web Development.
-                        <br><br>My background includes a bachelors degree from Bloomsburg University, where I studied
-                        Art Studio and Marketing. I have been working
-                        in marketing for 6 years. I currently work as an HTML Developer in email marketing. <br><br>
+                    <p class="lead">Front-End Web Developer with an extensive background in email marketing. 
+                        Earned a certificate in Full Stack Development from the University of Pennsylvania, with 
+                        new and newly refined skills in both Front and Back End Development, such as JavaScript, 
+                        CSS, HTML, and Node.js.
+                        <br><br>
+                        With each project, my aim is to best engage my audience for an
+                        impactful user-experience. Not a stranger to working on a team in fast paced, 
+                        creative environments. Excited to use my skills to develop responsive websites. 
+                        Positioned well to provide unique perspectives on how end-users interact with websites 
+                        and software platforms by leveraging my background in studio art and marketing. <br><br>
 
                         <a href="https://github.com/AmandaNicoleHiggins"> <i class="fab fa-github cgiticon"></i></a>
                         <a href="https://www.linkedin.com/in/amanda-higgins-82135b68/"><i
