updating contact page

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                         <a href="mailto:amanda.n.higgins@gmail.com"><i
                                 class="fas fa-envelope-open-text cgiticon"></i></a>
                         <br>
-                       <span class="contact"> Philadelphia, PA | <a class="clink" href="tel://2676648616">267-664-8616</a> | <a class="clink"
+                       <span class="contact"> Philadelphia, PA | <a class="clink"
                             href="mailto:amanda.n.higgins@gmail.com">amanda.n.higgins@gmail.com</a></span>
 
                     </p>
