--- a/portfolio.html
+++ b/portfolio.html
@@ -139,10 +139,21 @@
             <div class="card-body text-center">
               <h5 class="card-title mb-0">To-Dos App</h5>
               <div class="card-text text-black-50">Node & Express Web Server</div>
-              <a href="hhttps://github.com/AmandaNicoleHiggins/project2">  <i class="fab fa-github giticon"></i></a>
+              <a href="https://github.com/AmandaNicoleHiggins/project2">  <i class="fab fa-github giticon"></i></a>
             </div>
           </div>
         </div>
+          <!-- 9 -->
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow">
+                <a href="https://amandanicolehiggins.github.io/clicky-game/"> <img src="./assets/images/clicky.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Click Memory Game</h5>
+                <div class="card-text text-black-50">React.js</div>
+                <a href="https://github.com/AmandaNicoleHiggins/clicky-game">  <i class="fab fa-github giticon"></i></a>
+              </div>
+            </div>
+          </div>
     </div>
   </div>
   
