adding geo kathy

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
       <!-- 7 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-            <a href="https://amandanicolehiggins.github.io/liri-node-app/"> <img src="./assets/images/liri.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+            <a href="https://amandanicolehiggins.github.io/liri-node-app/"> <img src="./assets/images/liri.png" class="card-img-top pborder" alt="Liri"></a>
           <div class="card-body text-center">
             <h5 class="card-title mb-0">LIRI App</h5>
             <div class="card-text text-black-50">Node</div>
@@ -135,7 +135,7 @@
         <!-- 8 -->
         <div class="col-xl-3 col-md-6 mb-4">
           <div class="card border-0 shadow">
-              <a href="https://stark-badlands-78659.herokuapp.com/"> <img src="./assets/images/todo.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+              <a href="https://stark-badlands-78659.herokuapp.com/"> <img src="./assets/images/todo.png" class="card-img-top pborder" alt="To Dos"></a>
             <div class="card-body text-center">
               <h5 class="card-title mb-0">To-Dos App</h5>
               <div class="card-text text-black-50">Node & Express Web Server</div>
@@ -146,7 +146,7 @@
           <!-- 9 -->
           <div class="col-xl-3 col-md-6 mb-4">
             <div class="card border-0 shadow">
-                <a href="https://amandanicolehiggins.github.io/clicky-game/"> <img src="./assets/images/clicky.png" class="card-img-top pborder" alt="Movie Recipe App"></a>
+                <a href="https://amandanicolehiggins.github.io/clicky-game/"> <img src="./assets/images/clicky.png" class="card-img-top pborder" alt="Clicky Game"></a>
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Click Memory Game</h5>
                 <div class="card-text text-black-50">React.js</div>
@@ -154,6 +154,17 @@
               </div>
             </div>
           </div>
+              <!-- 10 -->
+              <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card border-0 shadow">
+                    <a href="https://github.com/AmandaNicoleHiggins/Geo-Kathy"> <img src="./assets/images/kathy.png" class="card-img-top pborder" alt="Geo Kathy"></a>
+                  <div class="card-body text-center">
+                    <h5 class="card-title mb-0">Geo Kathy</h5>
+                    <div class="card-text text-black-50">React.js</div>
+                    <a href="https://github.com/AmandaNicoleHiggins/clicky-game">  <i class="fab fa-github giticon"></i></a>
+                  </div>
+                </div>
+              </div>
     </div>
   </div>
   
