updating kathy image

--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
               <!-- 10 -->
               <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-0 shadow">
-                    <a href="https://github.com/AmandaNicoleHiggins/Geo-Kathy"> <img src="./assets/images/kathy.png" class="card-img-top pborder" alt="Geo Kathy"></a>
+                    <a href="https://github.com/AmandaNicoleHiggins/Geo-Kathy"> <img src="./assets/images/￼kathy.png" class="card-img-top pborder" alt="Geo Kathy"></a>
                   <div class="card-body text-center">
                     <h5 class="card-title mb-0">Geo Kathy</h5>
                     <div class="card-text text-black-50">React.js</div>
